fix projects on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -343,6 +343,14 @@ h4{
     padding-top:15px;
   }
 
+  .project-grid{
+    display: inline-block;
+  }
+
+  .project-grid-item-image {
+    display: none;
+  }
+
   .experience-card{
     max-width:100%;
     padding-bottom: 10px;
